# scx-power-sync-dbus

./: Cargo.toml  LICENSE  PKGBUILD  README.md
.cargo/: config.toml
contrib/: scx-power-sync-dbus.service  scx-power-sync-dbus.yaml
src/: main.rs
